--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,3 +2,33 @@ ja:
   hello: "こんにちは、世界"
   hot_papers: "最近読まれている論文"
   goto_pubmed: "PubMedで閲覧する"
+  department:
+    gastroenterology: '消化器'
+    cardiology: '循環器'
+    pulmonology: '呼吸器'
+    nephrology: '腎臓'
+    endocrinology: '内分泌'
+    diabetes: '糖尿病'
+    collagen_disease: '膠原病'
+    allergie: 'アレルギー'
+    hematology: '血液'
+    neurology: '神経'
+    infection_disease: '感染症'
+    oncology: '腫瘍'
+    er: '救急'
+    anesthesiology: '麻酔'
+    obstetrics_and_gynaecology: '産婦人科'
+    psychiatry: '精神科'
+    urology: '泌尿器'
+    otorhinolaryngology: '耳鼻咽喉科'
+    ophthalmology: '眼科'
+    surgery: '外科'
+    orthopaedics: '整形外科'
+    plastic_surgery: '形成外科'
+    neurosurgery: '脳神経外科'
+    radiology: '放射線科'
+    dermatology: '皮膚科'
+    pediatrics: '小児科'
+    clinical: '臨床'
+    basic: '基礎研究'
+    others: 'その他'
